assemble_out.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:dataBindingTriggerDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\mattv\AndroidStudioProjects\redact\app\src\main\java\com\doubleangels\redact\ShareHandlerActivity.java:329: error: variable fileName is already defined in method processMediaItem(Uri,boolean)
                                    String fileName = lastSegment.contains("/")
                                           ^
Note: C:\Users\mattv\AndroidStudioProjects\redact\app\src\main\java\com\doubleangels\redact\ShareHandlerActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

[Incubating] Problems report is available at: file:///C:/Users/mattv/AndroidStudioProjects/redact/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\mattv\AndroidStudioProjects\redact\app\src\main\java\com\doubleangels\redact\ShareHandlerActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\main\java\com\doubleangels\redact\ShareHandlerActivity.java:329: error: variable fileName is already defined in method processMediaItem(Uri,boolean)
                                      String fileName = lastSegment.contains("/")
                                             ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 13s
12 actionable tasks: 1 executed, 11 up-to-date
